--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Results</h1>
     <p>Detected objects: {{ results }}</p>
+    <p>Objects detected from Ingredient List: {{ ingredients }}</p>
     <a href="/">Back</a>
 </body>
 </html>
