--- a/templates/results.html
+++ b/templates/results.html
@@ -27,10 +27,10 @@
     <h1 class="mb-5 text-center">Results</h1>
     <div class="d-flex justify-content-center mb-4">
     
-{% if all_detected_objects %}
+<!-- {% if all_detected_objects %}
     <h2>All Detected Objects:</h2>
     <p>{{ all_detected_objects }}</p>
-{% endif %}
+{% endif %} -->
 
     </div>
     {% if ingredients %}
